<resources>
    <string name="app_name">MOBI</string>

    <string-array name="spinner_role">
        <item>Rodzic</item>
        <item>Dziecko</item>
    </string-array>

    <string name="groszek">Groszek</string>

    <string name="register_button">Zarejestruj się</string>
    <string name="login_button">Zaloguj się</string>

    <string name="theme_switch">Switch Theme</string>

    <string name="login_hint">Nazwa użytkownika</string>
    <string name="email_hint">Adres E-mail</string>
    <string name="password_hint">Hasło</string>
    <string name="logo_hint">logo sklepu groszek</string>
    <string name="goto_login_hint">Przejdź do logowania</string>
    <string name="goto_register_hint">Przejdź do rejestracji</string>
    <string name="role_spinner_description">Wybierz rolę</string>
    <string name="product_image">Zdjęcie produktu</string>
    <string name="dodaj_do_koszyka">Dodaj do koszyka</string>
    <string name="nazwa_produktu">Nazwa produktu</string>
    <string name="cena_0_00_z">Cena: 0,00 zł</string>
    <string name="register_title">Rejestracja</string>
    <string name="products_title">Lista produktów</string>
    <string name="login_title">Logowanie</string>
    <string name="cart_title">Koszyk</string>
    <string name="my_account_title">Moje konto</string>
    <string name="children">Moje dzieci</string>
    <string name="logout">Wyloguj się</string>
    <string name="add_child">Dodaj dziecko</string>
    <string name="child_email">Podaj adres e-mail dziecka</string>
    <string name="bin_icon_kid">Usuń dziecko</string>
    <string name="account_icon_kid">Konto dziecka</string>
    <string name="account_icon">Twoje konto</string>
    <string name="plus">+</string>
    <string name="minus">Zmniejsz wartość</string>
    <string name="plus_cart">Zwiększ ilość</string>
    <string name="minus_cart">Zmniejsz ilość</string>
    <string name="delete_cart">Usuń produkt</string>
    <string name="my_orders_title">Moje zamówienia</string>
    <string name="confirm_title">Zatwierdzanie zamówień</string>
    <string name="pickup_title">Odbieranie zamówień</string>
    <string name="stats_title">Statystyki</string>
    <string name="order">Złóż zamówienie</string>

</resources>