<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/productImg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/no_image"
        android:contentDescription="@string/product_image" />

    <!-- Product Name -->
    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/nazwa_produktu"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <!-- Product Price -->
    <TextView
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cena_0_00_z"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <!-- Add to Cart Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/dodaj_do_koszyka"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:layout_marginBottom="16dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>
