<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo_hint"
            android:src="@drawable/pea" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:backgroundTint="#DDE5B6"
        android:entries="@array/spinner_role"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        android:contentDescription="@string/role_spinner_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/green"
        android:text="@string/register_button"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/roleSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
