<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CartActivity">

    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo_hint"
            android:src="@drawable/pea" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- RecyclerView for Cart Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/totalLayout" />


    <LinearLayout
        android:id="@+id/childSect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/dateSect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/childText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Dziecko"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/childSpinner"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:colorBackground" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateSect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/totalLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/pickupDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Data odbioru"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickupDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wybierz datę"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/green"
            app:cornerRadius="16dp"
            app:iconPadding="8dp" />

    </LinearLayout>

    <!-- Total Price and Checkout Button -->
    <LinearLayout
        android:id="@+id/totalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suma: 0.00 zł"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/green"
            app:cornerRadius="16dp"
            app:iconPadding="8dp" />
    </LinearLayout>

    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/parent_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
